@@ -65,6 +65,7 @@ Framework loads modules, packages, models, definitions, controllers
 - added: routing supports schemas `*custom-schema/User` and we can define it in flags
 - added: String.prototype.parseBool()
 - added: framework.responseImageCache(req, res, fnPrepare, fnProcess, [headers])
+- added: String.prototype.parseJSON()
 
 - updated: (IMPORTANT) framework doesn't remove subdirectories with files in temporary directory
 - updated: (IMPORTANT) all models are loaded after is the framework loaded
@@ -117,7 +118,7 @@ Framework loads modules, packages, models, definitions, controllers
 - fixed: sender name encoding in mail (supports UTF-8)
 - fixed: Utils.trim()
 - fixed: Response.cookie()
-- fixed: String.format() --> null/undefined --> returns empty string
+- fixed: String.prototype.format() --> null/undefined --> returns empty string
 
 - improvements: routing performance
 
